--- a/style.css
+++ b/style.css
@@ -6,18 +6,24 @@ body {
 .text {
     color:#300064
 }
+.custom-link {
+    color: #300064; 
+    text-decoration: none; 
+}
+
+.custom-link:hover {
+    color: #df2aeb;
+    text-decoration: underline; 
+}
 h2 {
     text-align: center;
-    margin: 0 auto; /* Дополнительное выравнивание по центру */
+    margin: 0 auto; 
 }
-a {
-    color:#df2aeb
-}
+
 ul li {
     margin-bottom: 10px;
 }
 
-/* Общие стили для навигации */
 nav {
     background-color: #300064;
     padding: 10px 0;
@@ -155,25 +161,25 @@ footer p {
 }
 
 .competence {
-    width: 70px;
+    width: 90px;
     text-align: center;
     margin: 10px;
 }
 
 .competence-table {
-    width: 100px;
+    width: 100%;
     border-collapse: collapse;
 }
 
 .competence-table td {
-    padding: 20px;
     text-align: center;
     vertical-align: middle;
+    padding: 10px;
 }
 
 .competence-logo {
-    max-width: 70px;
-    height: 70px;
+    max-width: 90px;
+    height: 90px;
     object-fit: contain;
 }
 
@@ -289,4 +295,81 @@ section p {
 
 #about p {
     color: #eae1f0;
+}
+.resume {
+    width: 80%;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.resume h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #300064;
+}
+.resume table {
+    width: 100%;
+    border-collapse: collapse;
+}
+.resume th, .resume td {
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+.resume th {
+    background-color: #f2f2f2;
+}
+.resume tr:nth-child(even) {
+    background-color: #eae1f0;
+}
+.portfolio {
+    width: 80%;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.portfolio h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #300064;
+}
+.achievement {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+.achievement h2 {
+    text-align: left;
+    margin-top: 0;
+    color: #300064;
+}
+.achievement img {
+    max-width: 300px;
+    height: auto;
+    margin-left: 80px;
+
+}
+.achievement:not(:last-child) {
+    border-bottom: 3px solid #300064;
+}
+.text-block {
+    flex: 1;
+}
+.image-block {
+    flex: 1;
+    text-align: right;
+}
+.achievement:nth-child(odd) .text-block {
+    order: 1;
+}
+.achievement:nth-child(odd) .image-block {
+    order: 2;
+}
+.achievement:nth-child(even) .text-block {
+    order: 2;
+}
+.achievement:nth-child(even) .image-block {
+    order: 1;
 }
